k8s/base/ingress.yaml
---\napiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-marketplace-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.13.61.61.209.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
    - host: auth.13.61.61.209.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
